--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #191d2b;
+  color: aqua; */
 }
 
 code {
